# MedIntel-AI

./: README.md  app.py  pyproject.toml  requirements.txt
src/: Preliminary_diagnosis.py  PubMed_NCBI_Articles.ipynb  PubMed_NCBI_Articles.py  Summarize_Article.ipynb  Summarize_Article.py  preliminary_diagnosis.ipynb  symptom_extractor.py
